[package]
name = "quicly"
version = "0.0.0"
authors = ["Y.L. <yl@quic.ly>"]
edition = "2018"
description = "A pure Rust implementation of QUIC"
license = "MIT"
documentation = "https://docs.rs/quicly"
homepage = "https://quic.ly"
repository = "https://github.com/quic-ly/quicly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
