[package]
name = "quicly"
version = "0.0.1"
authors = ["Y.L. <yl@quic.ly>"]
edition = "2018"
description = "A pure Rust implementation of QUIC"
license = "MIT"
documentation = "https://docs.rs/quicly"
homepage = "https://quic.ly"
repository = "https://github.com/quic-ly/quicly"

[dependencies]
thiserror = "1.0.25"
anyhow = "1.0.41"
tokio = { version = "1.0", features = ["full"] }
#log = "0.4.14"
#async-trait = "0.1.42"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
#rand = "0.8"
#bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
#env_logger = "0.8"
#chrono = "0.4.19"
#clap = "2"

[[example]]
name = "echo"
path = "examples/echo.rs"
bench = false

[[example]]
name = "cli"
path = "examples/cli.rs"
bench = false